src/test/ui/error-codes/E0194.stderr
error[E0194]: type parameter `T` shadows another type parameter of the same name
  --> $DIR/E0194.rs:13:26
   |
11 | trait Foo<T> {
   |           - first `T` declared here
12 |     fn do_something(&self) -> T;
13 |     fn do_something_else<T: Clone>(&self, bar: T);
   |                          ^ shadows another type parameter

error: aborting due to previous error

